--- a/Rapport/1Chapters/3SystemOverview/ChoiceOfHardware.tex
+++ b/Rapport/1Chapters/3SystemOverview/ChoiceOfHardware.tex
@@ -11,10 +11,10 @@ As previously mentioned, the choice of processor is a DSP, as the DSP has a high
 The development board should also have an integrated audio codec, which handles the conversion between analog and digital signals. The requirements for the audio codec are as follows:
 
 \begin{enumerate}
-\item[4] The sample rate of the audio codec must be at least 48 kHz.\\
-\item[5] The sample rate of the audio codec must be compatible with 96 kHz.\\
-\item[6] A bit resolution of at least 16 bit must be supported by the audio codec. \\
-\item[7] A bit resolution of 24 bit must supported by the audio codec.\\
+\item[4] The sample rate of the audio codec must be at least 48 kHz.
+\item[5] The sample rate of the audio codec must be compatible with 96 kHz.
+\item[6] A bit resolution of at least 16 bit must be supported by the audio codec.
+\item[7] A bit resolution of 24 bit must supported by the audio codec.
 \item[9] The interface must comply with IEC 60268-15 standard.
 \end{enumerate}
 
