--- a/Rapport/1Chapters/Filters/ReqInterface.tex
+++ b/Rapport/1Chapters/Filters/ReqInterface.tex
@@ -1,29 +1,32 @@
-10. The compressor must have 4 bands. \\
-11. The bands of the compressor must comply with the class 2 of IEC 6964 standard (2001). \\
-12. The compressors must apply to frequencies below 500 Hz. \\
-\\ 
-A filter for decimation will be designed which must meet requirements 9, and a filter for interpolation will be designed which must not influence the decimated signals bandwidth, because it would otherwise influence the frequency response of the system making it non flat. The decimation filter will be deigned first.
 
-Because the system is a multirate system with octave bands as mentioned in \autoref{ch:designRealisation} only one filter needs to be designed because the sampling frequency is halved for every octave resulting in the same coefficients for all decimation and interpolation filters.
+\begin{enumerate}
+\item[11] The limiter must have 4 bands.
+\item[12] The bands of the limiter must comply with the class 2 of IEC 6964 standard (2001). 
+\item[13] The limiters must apply to frequencies below 500 Hz.
+\end{enumerate}
+
+A filter for decimation will be designed which must meet requirement 12, and a filter for interpolation will be designed which must not influence the decimated signals bandwidth, because it would otherwise influence the frequency response of the system making it non linear. The decimation filter will be deigned first.
+
+Because the system is a multirate system with octave bands as mentioned in \autoref{ch:designRealization} only one filter needs to be designed because the sampling frequency is halved for every octave resulting in the same coefficients for all decimation and interpolation filters.
 
 \section{Decimation filter}\label{sec:decFilter}
-The decimation filter must meet requirement 9 as just mentioned which states the requiremetns of the filter. The requirement can be seen in \autoref{fig:band1_reqOverview} and \autoref{tb:normalizedReqClass2} states the requirements to the figure.
+The decimation filter must meet requirement 12 as just mentioned which states the requirements for the filter. The requirements can be seen in \autoref{fig:band1_reqOverview} and \autoref{tb:normalizedReqClass2} which states the requirements to the figure.
 
 \begin{figure}[H]
 \centering
 \begin{subfigure}[t]{0.45\textwidth}
 	\tikzsetnextfilename{Band1Req}
 	\input{figures/Band1Req.tex}
-	\caption{Band 1 requierments.}
+	\caption{Band requirements.}
 	\label{fig:band1_req}
 \end{subfigure}
 \begin{subfigure}[t]{0.45\textwidth}
 	\tikzsetnextfilename{Band1ReqZoom}
 	\input{figures/Band1ReqZoom.tex}
-	\caption{Band 1 requierments zoomed in.}
+	\caption{Band requirements zoomed in.}
 	\label{fig:band1_reqZoom}
 \end{subfigure}
-\caption{Band 1 requierments without and with zoom.}
+\caption{Band requirements without and with zoom.}
 \label{fig:band1_reqOverview}
 \end{figure}
 
@@ -48,8 +51,8 @@ $\geq G^{\pm +4}$                                                               
 $\leq G^{\pm -4}$                                                                                                       & +60; +$\infty$                                                                                         \\ \hline
 \multicolumn{2}{|l|}{\begin{tabular}[c]{@{}l@{}}* At frequencies less than the lower band-edge frequency and greater than the\\ upper band-edge frequency, the limit on maximum relative attenuation is +$\infty$;\end{tabular}} \\ \hline
 \end{tabular}
-\caption{Normalized Requirements for the filters. G=2}
+\caption{Normalized requirements for the filters. G=2.}
 \label{tb:normalizedReqClass2}
 \end{table} 
  
-Only a lowpass filter should be designed because of spectral inversion, as described in \autoref{ch:designRealisation}, so instead of a bandpass requirements only one side of the requirements are showed from now on. %From system overview the octave bands are given for frequencies below 530 Hz, see \autoref{tb:freqBands} which meets requirement 8 and 10.
+Only a lowpass filter should be designed because of spectral inversion, as described in \autoref{ch:designRealization}, so instead of bandpass requirements only one side of the requirements are shown from now on. %From system overview the octave bands are given for frequencies below 530 Hz, see \autoref{tb:freqBands} which meets requirement 8 and 10.
