--- a/Rapport/1Chapters/3SystemOverview/ChoiceOfHardware.tex
+++ b/Rapport/1Chapters/3SystemOverview/ChoiceOfHardware.tex
@@ -23,7 +23,7 @@ Further more, the development platform needs accessible external GPIO to allow e
 
 \section{Development Board TMDX5515EZDSP}
 
-The TMDX5515EZDSP, seen in \autoref{fig:TMDX5515EZDSP_overview}, from Spectrum Digital is chosen as the development board because it fulfills all the hardware requirements except requirement 9, but this is deemed acceptable. The TMDX5515EZDSP uses a TMS320C5515 DSP from Texas Instruments as the CPU and is interfaced with a TLV320AIC3204 audio codec. Furthermore the development board is interfaced to peripherals such as an OLED screen, two buttons, microSD and an expansion connector with 60 ports. 
+Different DSP development platforms have been examined of which fulfils the requirements. Among these are the Analog Device EVAL-BF706M-EZLITE and TMDX5515EZDSP. The TMDX5515EZDSP is chosen for the system as the TMDX5515EZDSP as is available at the University. The development platform is seen in \autoref{fig:TMDX5515EZDSP_overview}, from Spectrum Digital is chosen as the development board because it fulfills all the hardware requirements except requirement 9, but this is deemed acceptable. The TMDX5515EZDSP uses a TMS320C5515 DSP from Texas Instruments as the CPU and is interfaced with a TLV320AIC3204 audio codec. Furthermore the development board is interfaced to peripherals such as an OLED screen, two buttons, microSD and an expansion connector with 60 ports. 
 
 \begin{figure}[H]
 \centering
