--- a/Rapport/figures/MainSystemOverview.tex
+++ b/Rapport/figures/MainSystemOverview.tex
@@ -43,7 +43,7 @@
 \node [] at ($(3.75,.9)+(AudioIN)$) {\textbf{Equalizer}};
 
 \draw [-,dashed,thick] ($(6.5,-0.75)+(AudioIN)$) -| ($(11.5,-9.75)+(AudioIN)$) -| ($(6.5,-0.75)+(AudioIN)$);
-\node [] at ($(9,-1)+(AudioIN)$) {\textbf{RMS Compressor}};
+\node [] at ($(9,-1)+(AudioIN)$) {\textbf{RMS Limiter}};
 
 
 %% Box Compressor %%
@@ -54,34 +54,34 @@
 
 %% First Band %% 
 \draw ($(1,0)+(AudioIN)$) to[highpass] node[yshift=-5mm,xshift=-10mm, below,midway]{High Pass} ($(4,0)+(AudioIN)$);
-\draw ($(4,0)+(AudioIN)$) to node[yshift=0mm,gain,label=below:Gain 5]{$G_{1,1}$} ($(6,0)+(AudioIN)$);
+\draw ($(4,0)+(AudioIN)$) to node[yshift=0mm,gain,label=below:Gain 5]{$G_{5}$} ($(6,0)+(AudioIN)$);
 \draw [->]($(6,0)+(AudioIN)$) -- node[at end,yshift=0mm,xshift=2mm]{\scalebox{0.5}{+}} (Summation);
 
 %% Second Band %%
 \draw ($(1,-2)+(AudioIN)$) to[bandpass] node[yshift=-5mm,xshift=-10mm, below,midway]{Band 4} ($(4,-2)+(AudioIN)$);
-\draw ($(4,-2)+(AudioIN)$) to node[yshift=0mm,gain,label=below:Gain 4]{$G_2$} ($(6,-2)+(AudioIN)$);
+\draw ($(4,-2)+(AudioIN)$) to node[yshift=0mm,gain,label=below:Gain 4]{$G_4$} ($(6,-2)+(AudioIN)$);
 %%% Second band - Compressor%%%
-\draw [->]($(6,-2)+(AudioIN)$) to node[yshift=0mm,gain,near end]{$G_{2,1}$} ($(-.5,0)+(Summation2)$) -- node[at end,yshift=0mm,xshift=2mm]{\scalebox{0.5}{+}} (Summation2);
+\draw [->]($(6,-2)+(AudioIN)$) to node[yshift=0mm,gain,near end]{$G_{4}$} ($(-.5,0)+(Summation2)$) -- node[at end,yshift=0mm,xshift=2mm]{\scalebox{0.5}{+}} (Summation2);
 \draw ($(6,-2)+(AudioIN)$) -| ($(7,-3)+(AudioIN)$) to node[yshift=0mm,gain]{RMS} ($(10.5,-3)+(AudioIN)$) -| ($(10.5,-2.52)+(AudioIN)$);
 
 %% Third Band %%
 \draw ($(1,-4)+(AudioIN)$) to[bandpass] node[yshift=-5mm,xshift=-10mm, below,midway]{Band 3} ($(4,-4)+(AudioIN)$);
-\draw ($(4,-4)+(AudioIN)$) to node[yshift=0mm,gain,label=below:Gain 3]{$G_2$} ($(6,-4)+(AudioIN)$);
+\draw ($(4,-4)+(AudioIN)$) to node[yshift=0mm,gain,label=below:Gain 3]{$G_3$} ($(6,-4)+(AudioIN)$);
 %%% Third band - Compressor%%%
-\draw [->]($(6,-4)+(AudioIN)$) to node[yshift=0mm,gain,near end]{$G_{3,1}$} ($(-.5,0)+(Summation3)$) -- node[at end,yshift=0mm,xshift=2mm]{\scalebox{0.5}{+}} (Summation3);
+\draw [->]($(6,-4)+(AudioIN)$) to node[yshift=0mm,gain,near end]{$G_{3}$} ($(-.5,0)+(Summation3)$) -- node[at end,yshift=0mm,xshift=2mm]{\scalebox{0.5}{+}} (Summation3);
 \draw ($(6,-4)+(AudioIN)$) -| ($(7,-5)+(AudioIN)$) to node[yshift=0mm,gain]{RMS} ($(10.5,-5)+(AudioIN)$) -| ($(10.5,-4.52)+(AudioIN)$);
 
 %% Fourth Band %%
 \draw ($(1,-6)+(AudioIN)$) to[bandpass] node[yshift=-5mm,xshift=-10mm, below,midway]{Band 2} ($(4,-6)+(AudioIN)$);
 \draw ($(4,-6)+(AudioIN)$) to node[yshift=0mm,gain,label=below:Gain 2]{$G_2$} ($(6,-6)+(AudioIN)$);
 %%% Fourth band - Compressor%%%
-\draw [->]($(6,-6)+(AudioIN)$) to node[yshift=0mm,gain,near end]{$G_{4,1}$} ($(-.5,0)+(Summation4)$) -- node[at end,yshift=0mm,xshift=2mm]{\scalebox{0.5}{+}} (Summation4);
+\draw [->]($(6,-6)+(AudioIN)$) to node[yshift=0mm,gain,near end]{$G_{2}$} ($(-.5,0)+(Summation4)$) -- node[at end,yshift=0mm,xshift=2mm]{\scalebox{0.5}{+}} (Summation4);
 \draw ($(6,-6)+(AudioIN)$) -| ($(7,-7)+(AudioIN)$) to node[yshift=0mm,gain]{RMS} ($(10.5,-7)+(AudioIN)$) -| ($(10.5,-6.52)+(AudioIN)$);
 
 %% Fifth band %% 
 \draw ($(1,-8)+(AudioIN)$) to[lowpass] node[yshift=-5mm,xshift=-10mm, below,midway]{Band 1} ($(4,-8)+(AudioIN)$);
-\draw ($(4,-8)+(AudioIN)$) to node[yshift=0mm,gain,label=below:Gain 1]{$G_5$} ($(6,-8)+(AudioIN)$);
+\draw ($(4,-8)+(AudioIN)$) to node[yshift=0mm,gain,label=below:Gain 1]{$G_1$} ($(6,-8)+(AudioIN)$);
 %%% Fourth band - Compressor%%%
-\draw [->]($(6,-8)+(AudioIN)$) to node[yshift=0mm,gain,near end]{$G_{5,1}$} ($(-.5,-2)+(Summation4)$) --($(0,-2)+(Summation4)$) -- node[at end,yshift=2mm,xshift=0mm]{\scalebox{0.5}{+}} (Summation4);
+\draw [->]($(6,-8)+(AudioIN)$) to node[yshift=0mm,gain,near end]{$G_{1}$} ($(-.5,-2)+(Summation4)$) --($(0,-2)+(Summation4)$) -- node[at end,yshift=2mm,xshift=0mm]{\scalebox{0.5}{+}} (Summation4);
 \draw ($(6,-8)+(AudioIN)$) -| ($(7,-9)+(AudioIN)$) to node[yshift=0mm,gain]{RMS} ($(10.5,-9)+(AudioIN)$) -| ($(10.5,-8.52)+(AudioIN)$);
 \end{circuitikz}
