SNR og Frekvens response

--- a/Rapport/1Chapters/2Requirements/Requirements.tex
+++ b/Rapport/1Chapters/2Requirements/Requirements.tex
@@ -23,11 +23,13 @@ The hardware must also be able to meet the specifications of IEC 60268-15 which 
 \item [\textlabel{7}{resolution}]  A bit resolution of 24 bit must be supported by the audio codec.\\
 \item [\textlabel{8}{I2S}] The DSP must have at least two $I^2S$ ports for interfacing with the audio codec.\\
 %\item [\textlabel{8}{MIPS}] The DSP must have at least 100 MIPS available.\todo{hmmmmmm den her vil sofus ikke kunne lide}\\
-\item [\textlabel{9}{IEC}] The interface must comply with IEC 60268-15 standard \citep{IEC60268}.
+\item [\textlabel{9}{IEC}] Must comply with IEC 60268-15 and 581-6 standard \citep{IEC60268}.
 \begin{enumerate}
 \item Rated output voltage: 0.5 V.
 \item Minimum output voltage: 0.2 V.
 \item Maximum output voltage: 2 V.
+\item Output SNR of >58 dB
+\item The frequency response must not deviate more than $\pm$ 1.5 dB
 \end{enumerate}
 \end{enumerate}
 \end{itemize}
