--- a/Rapport/2Appendix/AcceptRMS.tex
+++ b/Rapport/2Appendix/AcceptRMS.tex
@@ -5,16 +5,15 @@ The purpose of this test is verify requirement \textbf{XX} concerning RMS compre
 The setup of this test are depicted in \textbf{XX}, where the equipment is catalogued in \textbf{XX}, and described as follows:
 
 \begin{itemize}
-\item Frequency reponse will be measured by a Harmonie analyzer.
-\item A noise generator will generate the following for the test. 
-\begin{itemize}
-\item Sampling frequency: 48000 Hz.
-\item Generator amplitude: \textbf{X} V.
-\item Pink noise.
-\end{itemize}
-\item The software of the system used for the bypass test is found at CD. \todo[inline]{CD}
-\item The software of the system used for the stage1 test is found at CD. \todo[inline]{CD}
-\item The software of the system used for the full system test is found at CD. \todo[inline]{CD}
+	\item Frequency response will be measured by a Harmonie analyzer.
+	\item A noise generator will generate the following for the test. 
+	\begin{itemize}
+		\item Sampling frequency: 48000 Hz.
+		\item Generator amplitude: 10 mV, 100 mV, 200 mV, 300 mV, 400 mV, 500 mV, 600 mV, 700mV.
+		\item Pink noise from 20 Hz to 20 kHz
+	\end{itemize}
+	\item The samples are averaged over a period of 20 seconds
+	\item The software of the system used for the test is found at CD. \path{CD://Software/SystemFinal}
 \end{itemize}
 
 
