--- a/Rapport/2Appendix/AppendixMAIN.tex
+++ b/Rapport/2Appendix/AppendixMAIN.tex
@@ -23,7 +23,7 @@
 
 \input{2Appendix/FIRTheory}
 
-\input{2Appendix/FIRMatlab}
+%\input{2Appendix/FIRMatlab} Simply to much
 
 %\input{2Appendix/LookUP} Not needed
 
@@ -31,10 +31,10 @@
 
 \input{2Appendix/AcceptFilters}
 
-\input{2Appendix/AcceptFrequencyResponse}
+\input{2Appendix/AcceptFrequencyResponse} % done 
 
 \input{2Appendix/AcceptRMS}
 
-\input{2Appendix/AcceptNoise}
+\input{2Appendix/AcceptNoise} % done 
 
 \input{2Appendix/AcceptanceTEST}
