--- a/Rapport/2Appendix/AcceptFrequencyResponse.tex
+++ b/Rapport/2Appendix/AcceptFrequencyResponse.tex
@@ -1,19 +1,19 @@
 \chapter{Accepttest of Frequency response}\label{app:journal_Frequency_Response}
-The purpose of this test is verify requirement \textbf{XX} concerning the linearity of the frequence responce of the system.
+The purpose of this test is verify requirement 9 concerning the linearity of the frequence responce of the system. The system must comply with IEC 60268-15 and 581-6 standard \citep{IEC60268}. Meaning the frequency must not deviate more than $\pm$ 1.5 dB
 
 \section{Setup}
-The setup of this test are depicted in \autoref{fig:AcceptFreqResponse}, where the equipment is catalogued in tab:UsedEquipmentFreqResponse, and described as follows:
+The setup of this test are depicted in \autoref{fig:AcceptFreqResponseActual}, where the equipment is catalogued in \autoref{tab:UsedEquipmentFreqResponseActual}, and described as follows:
 
 \begin{itemize}
 \item Frequency response will be measured by a Harmonie analyzer.
 \item A noise generator will generate the following for the test. 
 \begin{itemize}
 \item Sampling frequency: 48000 Hz.
-\item Generator amplitude: \textbf{X} V.
-\item Pink noise.
+\item Generator amplitude: 100 mV.
+\item Pink noise from 20 Hz to 20 kHz
 \end{itemize}
-\item The software of the system used for the bypass test is found at CD. \path{CD://Software/SystemFinal}
-
+\item The samples are averaged over a period of 20 seconds
+\item The software of the system used for the test is found at CD. \path{CD://Software/SystemFinal}
 \end{itemize}
 
 
@@ -21,8 +21,8 @@ The setup of this test are depicted in \autoref{fig:AcceptFreqResponse}, where t
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.9\textwidth]{FreqReponseSetup.png}
-\label{fig:AcceptFreqResponse}
-\caption{Test setup.}
+\caption{Test setup of the frequency response}
+\label{fig:AcceptFreqResponseActual}
 \end{figure}
 
 \subsection*{Equipment used and AAU-no.}
@@ -32,12 +32,13 @@ The setup of this test are depicted in \autoref{fig:AcceptFreqResponse}, where t
 \ra{1.3}
 \begin{tabular}{S[table-format=1]ccc} \toprule
     {Item} & {Description} & {AAU-no} \\ \bottomrule 
-    1      &  Harmonie  & 60923  \\ 
-    2      &  Harmonie PC  & 56524  \\ 
-    3      &  Sine/Noise generator type 1049  & 08233  \\  \bottomrule 
+    1      &  Harmonie 01dB  & 60923  \\ 
+    2      &  Fujitsu Siemens LifeBook with Harmonie software  & 56524  \\ 
+    3      &  B \& K Sine/Noise generator type 1049  & 08233  \\ 
+    4      &  TMS320C5515 eZdsp USB stick  & NaN  \\  \bottomrule 
 \end{tabular}
 \caption{Table over equipment used in the test}
-\label{tab:UsedEquipmentFreqResponse}
+\label{tab:UsedEquipmentFreqResponseActual}
 \end{table}
 \vspace{-5mm}
 
@@ -50,12 +51,13 @@ The procedure for this experiment is described as follows:
 \item Setup the Harmonie and the Harmonie PC
 \item Start recording on the PC
 \item When finished save the results of the test.
+\item Repeat trials for both the full system and a bypassed version
 \end{enumerate}
 
 \section{Data Extraction}
-The raw dat for the Bypass can be found at the CD \todo[inline]{CD}
-The raw dat for the Full system can be found at the CD \todo[inline]{CD}
-There are 30 bands from 20 Hz to 20 kHz, see \autoref{tb:freqBands}, where a magnitude is given in dB for each band. 10 different measurements have been taken for both bypass and the full system. The mean and standard deviation (std) have been found for each band as has been plotted. The two bands 25 Hz and 20000 Hz has been removed from the plots because of large deviation and therefore not deemed usefull.
+The raw date from the test can be found at the CD, \\ 
+\path{CD://Maalinger/Maalinger210516 - Acceptance test for Frequency response}\\
+There are 30 bands from 20 Hz to 20 kHz, see \autoref{tb:freqBands2}, where a magnitude is given in dB for each band. 10 different measurements have been taken for both bypass and the full system. The mean and standard deviation (std) have been found for each band as has been plotted. The two bands 25 Hz and 20000 Hz has been removed from the plots because of large deviation and therefore not deemed useful.
 
 \begin{table}[H]
 \centering
@@ -66,12 +68,12 @@ There are 30 bands from 20 Hz to 20 kHz, see \autoref{tb:freqBands}, where a mag
 250  & 315  & 400  & 500  & 630  & 800  & 1000  & 1250  & 1600  & 2000  \\ \hline
 2500 & 3150 & 4000 & 5000 & 6300 & 8000 & 10000 & 12500 & 16000 & 20000 \\ \hline
 \end{tabular}
-\caption{Frequency bands.}
-\label{tb:freqBands}
+\caption{Frequency bands of the harmonie analyzer.}
+\label{tb:freqBands2}
 \end{table}
 
 \section{Analysis}
-
+The data is plotted according to their frequency. Each point is plotted with their individual standard deviation. Comparing the frequency responses of the bypassed and full system, it shows a difference in 0.4130 dB. Both responses keep a standard deviation of $\pm$0.121 dB for the bypassed and $\pm$0.205 dB for the full system.
 \begin{figure}[H]
 	\centering
 	\tikzsetnextfilename{FreqRespBypass}
@@ -96,8 +98,11 @@ There are 30 bands from 20 Hz to 20 kHz, see \autoref{tb:freqBands}, where a mag
 	\label{fig:FreqRespComp}
 \end{figure}
 
+
+
 \section{Error sources}
 
+Due to large deviations in the 25 Hz and 20 kHz region, the measurements for these bands have been discarded. However since the IEC 581-6 demands only and effective frequency spectrum of 40 Hz to 16 kHz, the measurements are still deemed valid.
 
 \section{Conclusion}
-From the test of bypass and fulle system it can be concluded that 
+From the test of both the bypassed and full system it can be concluded that the frequency response is linear and comply with the IEC 581-6 withhold a maximum deviation of $\pm$1.5 dB.
