--- a/Rapport/1Chapters/RMS/RMSMAIN.tex
+++ b/Rapport/1Chapters/RMS/RMSMAIN.tex
@@ -52,6 +52,6 @@ In each figure the worst case scenario is chosen as basis for creating a model t
 
 \input{1Chapters/RMS/Design.tex}
 
-\input{1Chapters/RMS/releaseTime.tex}
+%\input{1Chapters/RMS/releaseTime.tex}
 
 %\input{1Chapters/RMS/Simulation.tex}
