--- a/Rapport/figures/relativeFsBand.tex
+++ b/Rapport/figures/relativeFsBand.tex
@@ -14,7 +14,7 @@ scale only axis,
 unbounded coords=jump,
 xmin=0,
 xmax=1,
-xlabel={Normalized frequency [$2\frac{f_m}{f_s}$]},
+xlabel={$\text{Normalized Frequency (}\times\pi\text{ rad/sample)}$},
 xmajorgrids,
 ymin=-60,
 ymax=10,
